# PHP Carmen/UD7/Hoja07_WebServices_01/routes/api.php
@@ -3,9 +3,15 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\ProductoController;
+use App\Http\Controllers\LoginController;
+use App\Http\Controllers\LogoutController;
 
-Route::get('/user', function (Request $request) {
-    return $request->user();
-})->middleware('auth:sanctum');
+Route::post('login', LoginController::class);
+Route::post('logout', [LogoutController::class, 'logout'])->middleware('auth:sanctum');
 
-Route::apiResource('productos', ProductoController::class);
+Route::apiResource('productos', ProductoController::class)->except(['store', 'update', 'destroy']);
+Route::middleware('auth:sanctum')->group(function () {
+    Route::post('productos', [ProductoController::class, 'store']);
+    Route::put('productos/{producto}', [ProductoController::class, 'update']);
+    Route::delete('productos/{producto}', [ProductoController::class, 'destroy']);
+});
